# ppocr-vl16-screen-reader

./: .gitignore  DEPLOY_CN.md  README.md  download_models.py  install_macos_accel.command  install_windows_gpu.bat  launcher.py  ocr.py  pyproject.toml  start.bat  start.command
ocr_app/: __init__.py  app.py  platform.py  predictor.py  profiles.py  runtime.py  text.py
scripts/bootstrap/: bootstrap.bat  bootstrap.command
scripts/install/: install_macos_accel.command  install_windows_gpu.bat
scripts/models/: download_models.py
tests/: conftest.py  test_launcher.py  test_ocr.py  test_start_scripts.py
